add simple icon for while element